tests/rosetta/out/C/csv-to-html-translation-2.error
cc: exit status 1
/tmp/csv-to-html-translation-2.c: In function ‘main’:
/tmp/csv-to-html-translation-2.c:47:29: warning: implicit declaration of function ‘split’ [-Wimplicit-function-declaration]
   47 |   for (int tmp7 = 0; tmp7 < split(c, "\n").len; tmp7++) {
      |                             ^~~~~
/tmp/csv-to-html-translation-2.c:47:43: error: request for member ‘len’ in something not a structure or union
   47 |   for (int tmp7 = 0; tmp7 < split(c, "\n").len; tmp7++) {
      |                                           ^
/tmp/csv-to-html-translation-2.c:48:32: error: request for member ‘data’ in something not a structure or union
   48 |     char *line = split(c, "\n").data[tmp7];
      |                                ^
/tmp/csv-to-html-translation-2.c:49:12: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
   49 |     rows = 0;
      |            ^
/tmp/csv-to-html-translation-2.c:55:45: error: request for member ‘len’ in something not a structure or union
   55 |       for (int tmp8 = 0; tmp8 < rows.data[0].len; tmp8++) {
      |                                             ^
/tmp/csv-to-html-translation-2.c:56:37: error: request for member ‘data’ in something not a structure or union
   56 |         const char *h = rows.data[0].data[tmp8];
      |                                     ^
/tmp/csv-to-html-translation-2.c:57:36: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   57 |         char *tmp9 = concat_string(th, "<th>");
      |                                    ^~
/tmp/csv-to-html-translation-2.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/csv-to-html-translation-2.c:58:43: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   58 |         char *tmp10 = concat_string(tmp9, h);
      |                                           ^
/tmp/csv-to-html-translation-2.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/csv-to-html-translation-2.c:63:49: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   63 |       char *tmp12 = concat_string("      <tr>", th);
      |                                                 ^~
/tmp/csv-to-html-translation-2.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/csv-to-html-translation-2.c:71:49: error: request for member ‘len’ in something not a structure or union
   71 |         for (int tmp14 = 0; tmp14 < rows.data[i].len; tmp14++) {
      |                                                 ^
/tmp/csv-to-html-translation-2.c:72:42: error: request for member ‘data’ in something not a structure or union
   72 |           const char *cell = rows.data[i].data[tmp14];
      |                                          ^
/tmp/csv-to-html-translation-2.c:73:39: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   73 |           char *tmp15 = concat_string(cells, "<td>");
      |                                       ^~~~~
/tmp/csv-to-html-translation-2.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/csv-to-html-translation-2.c:74:46: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   74 |           char *tmp16 = concat_string(tmp15, cell);
      |                                              ^~~~
/tmp/csv-to-html-translation-2.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/csv-to-html-translation-2.c:78:51: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   78 |         char *tmp18 = concat_string("      <tr>", cells);
      |                                                   ^~~~~
/tmp/csv-to-html-translation-2.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/csv-to-html-translation-2.c:89:38: error: request for member ‘len’ in something not a structure or union
   89 |       for (int tmp21 = 0; tmp21 < row.len; tmp21++) {
      |                                      ^
/tmp/csv-to-html-translation-2.c:90:25: error: request for member ‘data’ in something not a structure or union
   90 |         char *cell = row.data[tmp21];
      |                         ^
/tmp/csv-to-html-translation-2.c:91:37: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   91 |         char *tmp22 = concat_string(cells, "<td>");
      |                                     ^~~~~
/tmp/csv-to-html-translation-2.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/csv-to-html-translation-2.c:96:47: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   96 |       char *tmp25 = concat_string("    <tr>", cells);
      |                                               ^~~~~
/tmp/csv-to-html-translation-2.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
