tests/rosetta/out/C/csv-to-html-translation-2.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:04Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:04Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static int headings = 1;

int main() {
  char *tmp1 =
      concat_string("Character,Speech\n",
                    "The multitude,The messiah! Show us the messiah!\n");
  char *tmp2 = concat_string(
      tmp1, "Brians mother,<angry>Now you listen here! He's not the messiah; "
            "he's a very naughty boy! Now go away!</angry>\n");
  char *tmp3 = concat_string(tmp2, "The multitude,Who are you?\n");
  char *tmp4 =
      concat_string(tmp3, "Brians mother,I'm his mother; that's who!\n");
  char *tmp5 = concat_string(
      tmp4, "The multitude,Behold his mother! Behold his mother!");
  const char *c = tmp5;
  list_int tmp6 = list_int_create(0);
  list_int rows = tmp6;
  for (int tmp7 = 0; tmp7 < split(c, "\n").len; tmp7++) {
    char *line = split(c, "\n").data[tmp7];
    rows = 0;
  }
  printf("<table>\n");
  if (headings) {
    if (rows.len > 0) {
      const char *th = "";
      for (int tmp8 = 0; tmp8 < rows.data[0].len; tmp8++) {
        const char *h = rows.data[0].data[tmp8];
        char *tmp9 = concat_string(th, "<th>");
        char *tmp10 = concat_string(tmp9, h);
        char *tmp11 = concat_string(tmp10, "</th>");
        th = tmp11;
      }
      printf("   <thead>\n");
      char *tmp12 = concat_string("      <tr>", th);
      char *tmp13 = concat_string(tmp12, "</tr>");
      printf("%s\n", tmp13);
      printf("   </thead>\n");
      printf("   <tbody>\n");
      int i = 1;
      while (i < rows.len) {
        const char *cells = "";
        for (int tmp14 = 0; tmp14 < rows.data[i].len; tmp14++) {
          const char *cell = rows.data[i].data[tmp14];
          char *tmp15 = concat_string(cells, "<td>");
          char *tmp16 = concat_string(tmp15, cell);
          char *tmp17 = concat_string(tmp16, "</td>");
          cells = tmp17;
        }
        char *tmp18 = concat_string("      <tr>", cells);
        char *tmp19 = concat_string(tmp18, "</tr>");
        printf("%s\n", tmp19);
        i = i + 1;
      }
      printf("   </tbody>\n");
    }
  } else {
    for (int tmp20 = 0; tmp20 < rows.len; tmp20++) {
      int row = rows.data[tmp20];
      const char *cells = "";
      for (int tmp21 = 0; tmp21 < row.len; tmp21++) {
        char *cell = row.data[tmp21];
        char *tmp22 = concat_string(cells, "<td>");
        char *tmp23 = concat_string(tmp22, cell);
        char *tmp24 = concat_string(tmp23, "</td>");
        cells = tmp24;
      }
      char *tmp25 = concat_string("    <tr>", cells);
      char *tmp26 = concat_string(tmp25, "</tr>");
      printf("%s\n", tmp26);
    }
  }
  printf("</table>\n");
  return 0;
}
